Lei feature (#1)
* Initial commit

* new branch 2024-04-16

* 2024-04-16

* 2024-04-16 finish course table initialization