@@ -1,17 +1,22 @@
 package com.group3.finalprojectbe.system.service.impl;
 
+import cn.hutool.core.collection.CollUtil;
 import cn.hutool.core.collection.CollectionUtil;
+import com.group3.finalprojectbe.system.dto.CourseDTO;
 import com.group3.finalprojectbe.system.dto.CourseTypeDTO;
+import com.group3.finalprojectbe.system.entity.CourseEntity;
 import com.group3.finalprojectbe.system.entity.CourseTypeEntity;
 import com.group3.finalprojectbe.system.excption.BizExceptionKit;
+import com.group3.finalprojectbe.system.mapper.CourseMapper;
 import com.group3.finalprojectbe.system.mapper.CourseTypeMapperHelper;
 import com.group3.finalprojectbe.system.repo.CourseTypeRepository;
 import com.group3.finalprojectbe.system.service.CourseTypeService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
+import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,6 +24,7 @@ public class CourseTypeServiceImpl implements CourseTypeService {
 
     private final CourseTypeRepository courseTypeRepository;
     private final CourseTypeMapperHelper courseTypeMapperHelper;
+    private final CourseMapper courseMapper;
 
 
     @Override
@@ -28,8 +34,21 @@ public class CourseTypeServiceImpl implements CourseTypeService {
         if (empty) {
             throw BizExceptionKit.of("There is no Course Type can be found in database");
         } else {
-            return all.stream().map(courseTypeMapperHelper::apply).collect(Collectors.toList());
+            return all.stream().map(courseTypeMapperHelper::apply).toList();
         }
 
+    }
+
+    @Override
+    @Transactional
+    public List<CourseDTO> getCoursesByTypeId(Long typeId) {
+        //get the courseType from database according to the courseTypeId, throw exception when courseType can not be found
+        CourseTypeEntity courseType = courseTypeRepository.findById(typeId).orElseThrow(() -> BizExceptionKit.of("Course Type can not be found by type id " + typeId));
+        //get the list of course from this courseType
+        List<CourseEntity> courses = courseType.getCourses();
+        //convert courseEntity to courseDTO, if the list is not empty
+
+        return CollUtil.isEmpty(courses) ? Collections.emptyList() :
+                courses.stream().map(courseMapper::apply).toList();
     }
 }
